import React from 'react'
import { mount } from 'enzyme'

import Popover from '../Popover'
import * as PositioningUtils from '../utils/PositioningUtils'

describe('Popover', () => {
    it('renders without crashing', () => {
        const popover = mount(getPopover())
        expect(popover).toMatchSnapshot()
    })

    it('adds arrow class when prop is set', () => {
        const popover = mount(getPopover({ withArrow: true }))
        expect(popover).toMatchSnapshot()
    })

    describe('Position Calculation', () => {
        it('calculates tooltip position after becoming visible', () => {
            const updatePopoverPositionSpy = jest.fn()
            const popover = mount(getPopover({ visible: false }))
            popover.instance()._updatePopoverPosition = updatePopoverPositionSpy
            popover.setProps({ visible: true })

            expect(updatePopoverPositionSpy).toHaveBeenCalled()
        })

        it('sets the tooltip to the given position if it is not set to `auto`', () => {
            PositioningUtils.hasEnoughSpace = jest.fn(() => true)
            jest.spyOn(
                PositioningUtils,
                'calculatePosition'
            ).mockImplementationOnce(() => ({
                x: 23,
                y: 42
            }))

            const popover = mount(getPopover({ position: 'right' })).instance()

            expect(popover.popover.style.getPropertyValue('top')).toBe('42px')
            expect(popover.popover.style.getPropertyValue('left')).toBe('23px')
        })

        it('allows vague positioning to avoid cut offs', () => {
            PositioningUtils.hasEnoughSpace = jest.fn(() => true)
            jest.spyOn(
                PositioningUtils,
                'calculatePosition'
            ).mockImplementationOnce(() => ({
                x: -23,
                y: 42
            }))

            const popover = mount(
                getPopover({ allowVaguePositioning: true })
            ).instance()

            expect(popover.popover.style.getPropertyValue('top')).toBe('-10px')
            expect(popover.popover.style.getPropertyValue('left')).toBe('10px')
        })

        it('sets the tooltip to the first position that has enough space when `auto` is supplied', () => {
            PositioningUtils.hasEnoughSpace = jest
                .fn()
                .mockReturnValueOnce(false) // top
                .mockReturnValueOnce(false) // right
                .mockReturnValueOnce(false) // bottom
                .mockReturnValueOnce(true) // left
            jest.spyOn(
                PositioningUtils,
                'calculatePosition'
            ).mockImplementationOnce(() => ({
                x: 23,
                y: 42
            }))
            const popover = mount(
                getPopover({ position: 'auto', withArrow: true })
            ).instance()

            expect(popover.popover.style.getPropertyValue('top')).toBe('42px')
            expect(popover.popover.style.getPropertyValue('left')).toBe('23px')
            expect(popover.popover.className).toContain('arrow_right')
        })

        it('sets the tooltip to the correct position when changing the gap size', () => {
            PositioningUtils.hasEnoughSpace = jest.fn(() => true)

            const popover = mount(
                getPopover({ position: 'top', visible: true })
            )
            const instance = popover.instance()

            instance.wrapper.getBoundingClientRect = jest.fn(() => ({
                left: 500,
                top: 500,
                width: 70,
                height: 20
            }))

            instance.popover.getBoundingClientRect = jest.fn(() => ({
                width: 70,
                height: 20
            }))

            expect(instance.popover.style.getPropertyValue('top')).toBe('-5px')

            popover.setProps({ gapSize: 20 })

            expect(instance.popover.style.getPropertyValue('top')).toBe('460px')
        })

        it('updates position when props change', () => {
            const updatePositionSpy = jest.fn()
            const popover = mount(
                getPopover({
                    positon: 'top',
                    allowVaguePosition: false,
                    withArrow: false,
                    gapSize: 10,
                    content: 'First content',
                    visible: false
                })
            )
            const instance = popover.instance()
            instance._updatePopoverPosition = updatePositionSpy
            expect(updatePositionSpy).toHaveBeenCalledTimes(0)

            popover.setProps({ visible: true })
            expect(updatePositionSpy).toHaveBeenCalledTimes(1)

            popover.setProps({ position: 'bottom' })
            expect(updatePositionSpy).toHaveBeenCalledTimes(2)

            popover.setProps({ allowVaguePositioning: true })
            expect(updatePositionSpy).toHaveBeenCalledTimes(3)

            popover.setProps({ withArrow: true })
            expect(updatePositionSpy).toHaveBeenCalledTimes(4)

            popover.setProps({ gapSize: 400 })
            expect(updatePositionSpy).toHaveBeenCalledTimes(5)

            popover.setProps({ content: 'New Content' })
            expect(updatePositionSpy).toHaveBeenCalledTimes(6)

            popover.setProps({ trigger: 'New Trigger' })
            expect(updatePositionSpy).toHaveBeenCalledTimes(6)
        })
    })

    it('updates refs', () => {
        const popoverRefSpy = jest.fn()
        mount(getPopover({ popoverRef: popoverRefSpy }))

        expect(popoverRefSpy).toHaveBeenCalled()
    })

    // Helpers ================================================================
    const getPopover = (props = {}) => (
        <Popover
            trigger={<span>Trigger Content</span>}
            content="Popover Content"
            visible
            {...props}
        />
    )
})
