// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover adds arrow class when prop is set 1`] = `
<Popover
  content="Popover Content"
  gapSize={5}
  position="auto"
  trigger={
    <span>
      Trigger Content
    </span>
  }
  visible={true}
  withArrow={true}
>
  <span
    key=".0"
    onClick={[Function]}
  >
    Trigger Content
  </span>
  <Portal
    containerInfo={
      <body>
        <span
          class="reactist popover visible"
          style="top: -5px; left: 0px;"
        >
          <span
            class="reactist popover__content"
          >
            Popover Content
          </span>
        </span>
        <span
          class="reactist popover visible arrow_bottom"
          style="top: -5px; left: 0px;"
        >
          <span
            class="reactist popover__content"
          >
            Popover Content
          </span>
        </span>
      </body>
    }
  >
    <span
      className="reactist popover visible arrow_bottom"
    >
      <span
        className="reactist popover__content"
      >
        Popover Content
      </span>
    </span>
  </Portal>
</Popover>
`;

exports[`Popover renders without crashing 1`] = `
<Popover
  content="Popover Content"
  gapSize={5}
  position="auto"
  trigger={
    <span>
      Trigger Content
    </span>
  }
  visible={true}
>
  <span
    key=".0"
    onClick={[Function]}
  >
    Trigger Content
  </span>
  <Portal
    containerInfo={
      <body>
        <span
          class="reactist popover visible"
          style="top: -5px; left: 0px;"
        >
          <span
            class="reactist popover__content"
          >
            Popover Content
          </span>
        </span>
      </body>
    }
  >
    <span
      className="reactist popover visible"
    >
      <span
        className="reactist popover__content"
      >
        Popover Content
      </span>
    </span>
  </Portal>
</Popover>
`;
